--- a/package.json
+++ b/package.json
@@ -29,5 +29,10 @@
     "eslint-config-next": "15.3.0",
     "tailwindcss": "^4",
     "typescript": "5.8.3"
+  },
+  "clerk": {
+    "middleware": {
+      "location": "src/middleware.ts"
+    }
   }
 }
